--- a/index.html
+++ b/index.html
@@ -21,7 +21,21 @@
     </head>
     <body>
 
-        <h1>TEST :)</h1>
+        <nav class="navbar navbar-dark bg-dark">
+            <div class="container-fluid">
+                <h1 class="navbar-brand mb-0 h1">Agricultural Sites Comparison</h1>
+                <h3 id="hitemwithit">Current Country: <a id="country" class="akon" href="#">Latvia</a></h3>
+                <a id="takeoff" class="akon" href="#" >More stuff</a>
+            </div>
+        </nav>
+
+        <br>
+
+        <div id="bigblanket">
+
+            <iframe id="ag_holder" src="https://www.zm.gov.lv/en/" frameborder="0"></iframe>
+
+        </div>
 
         <!-- U T I L I T Y -->
 
