--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid">
                 <h1 class="navbar-brand mb-0 h1">Agricultural Sites Comparison</h1>
-                <h3 id="hitemwithit">Current Country: <a id="country" class="akon" href="#">Latvia</a></h3>
-                <a id="takeoff" class="akon" href="#" >More stuff</a>
+                <h3 id="hitemwithit">Current Country: <a id="yeeyee" class="akon" href="#">Latvia</a></h3>
+                <a id="takeoff" class="akon" href="https://github.com/kiecphrase" >More stuff</a>
             </div>
         </nav>
 
