--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 
         <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid">
-                <h1 class="navbar-brand mb-0 h1">Agricultural Sites Comparison</h1>
+                <h2 class="clean_text">Agricultural Sites Comparison</h2>
                 <h3 id="hitemwithit">Current Country: <a id="yeeyee" class="akon" href="#">Latvia</a></h3>
-                <a id="takeoff" class="akon" href="https://github.com/kiecphrase" >More stuff</a>
+                <h4><a id="refresh" class="akon" href="#" >New site</a></h4>
+                <h5><a id="takeoff" class="akon" href="https://github.com/kiecphrase" >More stuff</a></h5>
             </div>
         </nav>
 
