added about link
added link to the main repository page

--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-        <!-- <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"> -->
-
         <link rel="stylesheet" href="steez.css">
     </head>
     <body>
@@ -26,7 +24,11 @@
                 <h2 class="clean_text">Agricultural Sites Comparison</h2>
                 <h3 id="hitemwithit">Current Country: <a id="yeeyee" class="akon" href="#">Latvia</a></h3>
                 <h4><a id="refresh" class="akon" href="#" >New site</a></h4>
-                <h5><a id="takeoff" class="akon" href="https://github.com/kiecphrase" >More stuff</a></h5>
+                <div>
+                    <a id="takeoff" class="akon" href="https://github.com/kiecphrase/agsite" >About</a>
+                    <br>
+                    <a id="takeoff" class="akon" href="https://github.com/kiecphrase" >More stuff</a>
+                </div>
             </div>
         </nav>
 
